--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/starlight": "^0.26.1",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.10.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sharp": "^0.32.5",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "typescript-plugin-css-modules": "^5.1.0"
   }
 }
