Add React Code Mirror

--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/starlight": "^0.26.1",
+    "@codemirror/lang-javascript": "^6.2.2",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@uiw/codemirror-theme-vscode": "^4.23.0",
+    "@uiw/react-codemirror": "^4.23.0",
     "astro": "^4.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
