--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@codemirror/lang-css": "^6.2.1",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-javascript": "^6.2.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/joy": "^5.0.0-beta.48",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@uiw/codemirror-theme-vscode": "^4.23.0",
