--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@uiw/react-codemirror": "^4.23.0",
     "astro": "^4.10.2",
     "classnames": "^2.5.1",
+    "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sharp": "^0.32.5",
