--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@codemirror/lang-javascript": "^6.2.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.0.1",
     "@mui/joy": "^5.0.0-beta.48",
+    "@mui/material": "^6.0.1",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@uiw/codemirror-theme-vscode": "^4.23.0",
