--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@codemirror/lang-javascript": "^6.2.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/inter": "^5.0.20",
     "@mui/icons-material": "^6.0.1",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.0.1",
