--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "astro": "^4.10.2",
     "classnames": "^2.5.1",
     "immer": "^10.1.1",
+    "indent-string": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sharp": "^0.32.5",
