Add eslint and prettier

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 astro check && astro build",
+    "lint": "eslint ./src --ext .jsx,.js,.ts,.tsx --ignore-path ./.gitignore",
+    "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --fix --ignore-path ./.gitignore",
+    "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\"",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -36,7 +39,17 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
     "cross-env": "^7.0.3",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript-plugin-css-modules": "^5.1.0"
   }
 }
